--- a/.github/workflows/wakatime.yml
+++ b/.github/workflows/wakatime.yml
@@ -1,34 +1,19 @@
 name: Waka Readme
 
 on:
-  workflow_dispatch:
   schedule:
-    # Runs every 2 hours
-    - cron: "0 */2 * * *"
-
+    # Runs at 12am IST
+    - cron: '30 18 * * *'
+  workflow_dispatch:
 jobs:
   update-readme:
-    name: Update this repo's README
+    name: Update Readme with Metrics
     runs-on: ubuntu-latest
     steps:
-      - uses: anmol098/waka-readme-stats@master
+      - uses: anmol098/waka-readme-stats@master  athul/waka-readme@master
         with:
           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
-          
-          
-# name: Waka Readme
+          GH_TOKEN: ${{ secrets.GH_TOKEN }}
 
-# on:
-#   schedule:
-#     # Runs at 12am IST
-#     - cron: '30 18 * * *'
-#   workflow_dispatch:
-# jobs:
-#   update-readme:
-#     name: Update Readme with Metrics
-#     runs-on: ubuntu-latest
-#     steps:
-#       - uses: anmol098/waka-readme-stats@master  athul/waka-readme@master
-#         with:
-#           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
-#           GH_TOKEN: ${{ secrets.GH_TOKEN }}
+#     # Runs every 2 hours
+#     - cron: "0 */2 * * *"
